--- a/reader.html
+++ b/reader.html
@@ -79,15 +79,19 @@
   <div id="paywall">
     <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
     <a
-      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/816280"
-      class="lemonsqueezy-button"
-      id="monthly-btn"
-    >Subscribe Monthly</a>
-    <a
-      href="https://classyfemininity.lemonsqueezy.com/checkout/buy/816279"
-      class="lemonsqueezy-button"
-      id="yearly-btn"
-    >Subscribe Yearly</a>
+  href="https://app.lemonsqueezy.com/checkout/buy/816280?embed=1"
+  class="lemonsqueezy-button"
+  id="monthly-btn"
+>
+  Subscribe Monthly
+</a>
+<a
+  href="https://app.lemonsqueezy.com/checkout/buy/816279?embed=1"
+  class="lemonsqueezy-button"
+  id="yearly-btn"
+>
+  Subscribe Yearly
+</a>
   </div>
 
   <!-- PDF Canvas -->
